<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="adaptivex.pedidoscloud.View.Users.RegisterFragment">


    <!-- Inicio de Register Form-->
    <LinearLayout
        android:id="@+id/form_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_ingresardatos"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:padding="20dp"
            android:textColor="@color/white"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/register_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_telefono"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/register_localidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_localidad"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/register_calle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_calle"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/register_nro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_nro"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/register_piso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_piso"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/register_contacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_contacto"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:textColor="@color/white"
            android:id="@+id/register_btn_register"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_register"
            android:layout_gravity="left"
            android:textStyle="bold"
            />



        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">


            <TextView
                android:id="@+id/tvCartelLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="¿Ya Tienes Cuenta?. Haz Click en Iniciar Sesion"
                android:fontFamily="@string/abc_capital_on"
                android:paddingBottom="10dp"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/register_link_login"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/action_login"
                android:layout_gravity="left"
                android:textColor="@color/white"

                />
        </LinearLayout>
    </LinearLayout>

    <!-- Fin de Register Form -->

</FrameLayout>
