<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="adaptivex.pedidoscloud.View.Pedidos.CargarCantidadFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/relative_layout_main_padding">

    <TextView
        android:id="@+id/cargar_cantidad_lbl_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2 - Agregar Cantidad de Helado"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin_titulo"
        />


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="3dp"
        android:layout_below="@+id/cargar_cantidad_lbl_titulo"
        android:id="@+id/cargar_cantidad_cv1"
        >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/cantidad_btn_promos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_notifications_active_black_24dp"
                    android:text="@string/promos"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/colorPrimaryDark"

                    />




                <Button
                    android:id="@+id/cantidad_btn_agregar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_add_shopping_cart_black_24dp"
                    android:text="@string/agregar"
                    android:layout_toLeftOf="@+id/cantidad_spn_cantidad"
                    style="@style/Widget.AppCompat.Button.Colored"
                    />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cantidad_spn_cantidad"
                    android:layout_alignParentRight="true"
                    android:textSize="30dp"
                    android:padding="10dp"

                    >
                </Spinner>
            </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:id="@+id/cargar_cantidad_rvPotes"
        android:layout_below="@+id/cargar_cantidad_cv1"
        android:layout_above="@+id/cargar_cantidad_btn_listo"
        />

    <Button
        android:id="@+id/cargar_cantidad_btn_listo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listo"
        android:drawableRight="@drawable/ic_check_black_24dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_alignParentBottom="true"/>



</RelativeLayout>

</FrameLayout>
